Player loading test working on chrome and firefox
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1771 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/tests/selenium_settings.ini
+++ b/tests/selenium_settings.ini
@@ -1,11 +1,15 @@
 [SeleniumSettings]
 
+browsers[firefox] 	= "Firefox on Linux"
+browsers[chrome] 	= "*chrome"
+
 host			= "lightcorp.net"
 port			= "4444"
 wikiUrl			= "http://mwembed"
 username		= "wikiuser"
 userPassword	= "wikipass"
-testBrowser		= "*chrome"
+listBrowsers = true
+testBrowser		= "Firefox on Linux"
 jUnitLogFile	=
 runAgainstGrid	= true
 startserver = false
