* svn watcher runs all configured test environments * email handling based on test success or failure
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1916 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/tests/selenium_settings.ini
+++ b/tests/selenium_settings.ini
@@ -1,7 +1,8 @@
 [SeleniumSettings]
 
-browsers[firefox] 	= "Firefox on Linux"
-browsers[chrome] 	= "*chrome"
+browsers[firefox36] 	= "Firefox 3.6 on Linux"
+browsers[chrome] 	= "Google Chrome on Windows"
+browsers[ie8] 	= "IE 8 on Windows"
 
 host			= "lightcorp.net"
 port			= "4444"
@@ -9,7 +10,7 @@ wikiUrl			= "http://mwembed"
 username		= "wikiuser"
 userPassword	= "wikipass"
 listBrowsers = true
-testBrowser		= "Firefox on Linux"
+testBrowser		= 'Firefox 3.6 on Linux'
 jUnitLogFile	=
 runAgainstGrid	= true
 startserver = false
