more checks for duration embed wizard tweeks
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2425 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/LocalSettings.php.sample
+++ b/LocalSettings.php.sample
@@ -15,7 +15,8 @@ $wgEnableIframeApi = true;
 $wgEnableIpadHTMLControls = true;
 $wgKalturaUseManifestUrls = true;
 
-// Allows remote kaltura service queries from php ( usefull for onPrem or CE editions using the iframe )
+// Allows remote kaltura service queries from php ( useful for onPrem or CE editions using the iframe 
+//on a diffrent server from their mwEmbed library location)
 $wgAllowRemoteKalturaService = false;
 
 // Allows custom resources to be loaded from the ui-conf, useful for custom plugins, 
