adds support for remote kalatur api services rendered inside the kaltura html5 library location. refactored global usage of service related configuration
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2553 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/LocalSettings.php.sample
+++ b/LocalSettings.php.sample
@@ -16,8 +16,8 @@ $wgEnableIpadHTMLControls = true;
 $wgKalturaUseManifestUrls = true;
 
 // Allows remote kaltura service queries from php ( useful for onPrem or CE editions using the iframe 
-//on a diffrent server from their mwEmbed library location)
-$wgAllowRemoteKalturaService = false;
+//on a different server from their mwEmbed library location)
+$wgKalturaAllowIframeRemoteService = false;
 
 // Allows custom resources to be loaded from the ui-conf, useful for custom plugins, 
 // DO NOT enable this if you have other services on the same domain as the iframe as it essentially
