don't enable freewheel by default
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2571 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/LocalSettings.php.sample
+++ b/LocalSettings.php.sample
@@ -25,5 +25,5 @@ $wgKalturaAllowIframeRemoteService = false;
 $wgAllowCustomResourceIncludes = false;
 
 
-$wgMwEmbedEnabledModules = array( 'EmbedPlayer', 'KalturaSupport', 'AdSupport', 'Playlist', 'TimedText', 'FreeWheel' );
+$wgMwEmbedEnabledModules = array( 'EmbedPlayer', 'KalturaSupport', 'AdSupport', 'Playlist', 'TimedText' );
 ?>
