* Changed default service url to use cdn * Added Stats service url * Removed temp data from captionPlugin.js * Change mw.KApi.js to send stats requests with stats url
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2602 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/LocalSettings.php.sample
+++ b/LocalSettings.php.sample
@@ -9,6 +9,9 @@
 // Set this to true for debug support
 $wgEnableScriptDebug = false;
 
+// Set Kaltura Stats service url to custom domain
+// $wgKalturaStatsServiceUrl = $wgHTTPProtocol . '://stats.kaltura.com';
+
 // By default we enable ( all ) the modules. You probably only want player related modules enabled: 
 // Here are the most common used modules: 
 $wgMwEmbedEnabledModules = array( 'EmbedPlayer', 'KalturaSupport', 'AdSupport', 'Playlist', 'TimedText' );
