--- a/LocalSettings.php.sample
+++ b/LocalSettings.php.sample
@@ -5,6 +5,9 @@
  * See includes/DefaultSettings.php for a configuration options
  * 
  */
+ 
+// To disable minification and caching set enable script debug to true;
+$wgEnableScriptDebug = false;
 
 // By default we enable ( all ) the modules. Here is a list of default enabled modules that are 
 // currently maintained and tested. 
