--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Kaltura HTML5 MwEmbed </name>
+	<name>Kaltura MwEmbed </name>
 	<comment></comment>
 	<projects>
 	</projects>
