--- a/LocalSettings.php.sample
+++ b/LocalSettings.php.sample
@@ -11,6 +11,22 @@ $wgEnableScriptDebug = false;
 
 // By default we enable ( all ) the modules. Here is a list of default enabled modules that are 
 // currently maintained and tested. 
-$wgMwEmbedEnabledModules = array( 'EmbedPlayer', 'KalturaSupport', 'AdSupport', 'Playlist', 'TimedText', 'Omniture', 
-									'Plymedia', 'FreeWheel', 'EmbedWizard',  'SyntaxHighlighter', 'DoubleClick', 'Comscore' );
-
+$wgMwEmbedEnabledModules = array( 
+	'MwEmbedSupport',
+	'EmbedPlayer', 
+	'KalturaSupport', 
+	'AdSupport',
+	'Playlist', 
+	'TimedText', 
+	'Omniture', 
+	'Plymedia',
+	'FreeWheel',
+	'EmbedWizard', 
+	'SyntaxHighlighter',
+	'DoubleClick',
+	'Conviva', 
+	'NielsenCombined',
+	'NielsenVideoCensus',
+	'Comscore',
+	'DolStatistics'
+);
