added seek code from 1.6.11 and added seek test file from 11dc5a198f5925c5e4dbef389d18900727ed5695

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Fri Dec 09 17:15:20 PST 2011
 eclipse.preferences.version=1
 encoding//modules/Comscore/mw.Comscore.js=UTF-8
+encoding//modules/KalturaSupport/tests/SeekApi.qunit.html=UTF-8
