--- a/LocalSettings.php.sample
+++ b/LocalSettings.php.sample
@@ -11,4 +11,20 @@ $wgEnableScriptDebug = false;
 
 // By default we enable ( all ) the modules. Here is a list of default enabled modules that are 
 // currently maintained and tested. 
-$wgMwEmbedEnabledModules = array( 'EmbedPlayer', 'KalturaSupport', 'AdSupport', 'Playlist', 'TimedText', 'Omniture','Plymedia', 'FreeWheel', 'EmbedWizard',  'SyntaxHighlighter', 'DoubleClick', 'Comscore' );
+$wgMwEmbedEnabledModules = array( 
+	
+	'EmbedPlayer', 
+	'KalturaSupport', 
+	
+	'AdSupport',
+	'Comscore', 
+	'Conviva', 
+	'DoubleClick',
+	'FreeWheel',
+	'GoogleAnalytics',
+	'NielsenCombined',
+	'NielsenVideoCensus'
+	'Playlist', 
+	'Plymedia', 
+	'TimedText', 
+);
