added missing comma

--- a/LocalSettings.php.sample
+++ b/LocalSettings.php.sample
@@ -23,7 +23,7 @@ $wgMwEmbedEnabledModules = array(
 	'FreeWheel',
 	'GoogleAnalytics',
 	'NielsenCombined',
-	'NielsenVideoCensus'
+	'NielsenVideoCensus',
 	'Playlist', 
 	'Plymedia', 
 	'TimedText', 
