ignore .prefs file from eclipse project

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Sun Jun 03 22:51:33 PDT 2012
+#Tue Jun 19 15:20:17 PDT 2012
 eclipse.preferences.version=1
 encoding//modules/Comscore/resources/mw.Comscore.js=UTF-8
+encoding//modules/EmbedPlayer/EmbedPlayer.i18n.php=UTF-8
+encoding//modules/TimedText/TimedText.i18n.php=UTF-8
