major refactor for sync with flash, renamed back to omniture

--- a/LocalSettings.php.sample
+++ b/LocalSettings.php.sample
@@ -17,7 +17,7 @@ $wgMwEmbedEnabledModules = array(
 	'AdSupport',
 	'Playlist',
 	'TimedText',
-	'SiteCatalyst15',
+	'Omniture',
 	'Plymedia',
 	'FreeWheel',
 	'EmbedWizard',
