--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Tue Jun 19 15:20:17 PDT 2012
+#Fri Aug 17 18:25:53 PDT 2012
 eclipse.preferences.version=1
 encoding//modules/Comscore/resources/mw.Comscore.js=UTF-8
 encoding//modules/EmbedPlayer/EmbedPlayer.i18n.php=UTF-8
+encoding//modules/GoogleAnalytics/tests/GoogleAnalytics.qunit.html=UTF-8
 encoding//modules/TimedText/TimedText.i18n.php=UTF-8
